# Windows-MCP

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  setup.py
src/config/: settings.py
src/core/: command_executor.py  session_manager.py
src/mcp_windows/: main.py
src/mcp_windows/core/: security_manager.py  workspace_manager.py
src/mcp_windows/models/: command_result.py  file_info.py  registry_entry.py
src/mcp_windows/shells/: base_shell.py  cmd_shell.py  powershell_shell.py
src/mcp_windows/tools/: command_tools.py  file_tools.py  session_tools.py
src/mcp_windows/utils/: logging_config.py  path_utils.py  security_utils.py
src/models/: session.py
src/registry/: folder_registry.py
src/shells/: base_shell.py  cmd_shell.py
src/tools/: file_tools.py  session_tools.py
src/utils/: security_utils.py
